# Astera

./: IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md
.github/workflows/: ci.yml
benchmarks/benches/: contract_benchmarks.rs
contracts/credit_score/src/: lib.rs
contracts/invoice/: Cargo.toml
contracts/invoice/src/: lib.rs
contracts/invoice/tests/: multi_oracle_tests.rs  timeout_tests.rs
contracts/pool/src/: lib.rs
contracts/pool/tests/: integration_tests.rs
contracts/share/: Cargo.toml
contracts/share/tests/: fuzz_tests.rs  lib.rs
contracts/tests/tests/: integration_tests.rs
frontend/: package-lock.json  package.json
frontend/__tests__/lib/: auth.test.ts
frontend/app/api/events/: route.ts
frontend/app/api/notifications/webhook/test/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/portfolio/: page.tsx
frontend/components/: CreditScore.tsx  NotificationBell.tsx  WalletConnect.tsx  WalletConnectionMonitor.tsx
frontend/lib/: auth.ts  contracts.ts  hooks.ts  stellar.ts  types.ts  useContractEvents.ts
frontend/locales/en/: common.json
frontend/locales/fr/: common.json
oracle-service/src/: verifier.ts
