[package]
name = "invoice"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
proptest = "1.4"

[[test]]
name = "fuzz_tests"
path = "tests/fuzz_tests.rs"

[[test]]
name = "timeout_tests"
path = "tests/timeout_tests.rs"

[[test]]
name = "multi_oracle_tests"
path = "tests/multi_oracle_tests.rs"
